Change method singleton to Set.of